[package]
name = "rust-web-guide"
version = "0.1.0"
authors = ["k00432"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "ex1"
crate-type = ["bin"]

[[example]]
name = "ex2"
crate-type = ["bin"]

[dependencies]
actix-web = "1.0.5"
serde = "1.0.99"